--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.5
+  provider: ^6.1.2
   uuid: ^3.0.7
+  path_provider: ^2.1.2
+  file_picker: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
