--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   uuid: ^3.0.7
   path_provider: ^2.1.2
   file_picker: ^6.1.1
-
+  share_plus: ^7.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
